# ftpsync

./: LICENSE  README.md  ftpsync.py  pyproject.toml  test_ftpsync.py
.github/workflows/: test.yml
test-data/folder/: c
