[project]
name = "ftpsync"
version = "0.2.0"
description = "A caching website uploader using FTP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "pyright>=1.1.392.post0",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203", # incompatible with D211
    "D213", # incompatible with D213
    "T201", # print statements
    "PTH",  # Use pathlib instead of string paths, 
]
